syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.htdong.common.rpc.bili";
option java_outer_classname = "BiliRpcServiceProto";

option go_package = "./;bili";

message AddNewGuardRequest {
    int64 roomId = 1;
    int64 uid = 2;
    string username = 3;
    int32 guardLevel = 4;
}

service BiliRpcService {
    rpc RoomCanUseServer(google.protobuf.Int64Value) returns (google.protobuf.BoolValue) {}
    rpc AddNewGuard(AddNewGuardRequest) returns (google.protobuf.Empty) {}
}